<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent">
    <RelativeLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/fill_orders"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:paddingLeft="17dp"
            android:paddingRight="17dp"
            android:paddingTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/light_black"
            android:textSize="18sp"
            android:id="@+id/verification_title"
            android:fontFamily="@string/font_fontFamily_drawer_item"
            android:text="@string/fragment_send_order_text"/>
        <LinearLayout
            android:layout_marginTop="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:textColor="@color/blue_900"
                android:layout_height="wrap_content"
                android:text="@string/fragment_order_requests_drug_name_title_text"/>
            <EditText
                android:id="@+id/drug_name_edit_text"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:textSize="15sp"
                android:hint="@string/fragment_order_requests_drug_name_hint"
                android:textColorHint="@color/gray"
                android:textColor="@color/gray"/>
            <TextView
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blue_900"
                android:text="@string/fragment_order_requests_drug_type_title_text"/>
            <EditText
                android:id="@+id/drug_type_edit_text"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:textSize="15sp"
                android:hint="@string/fragment_order_requests_drug_type_hint"
                android:textColorHint="@color/gray"
                android:textColor="@color/gray"/>
            <TextView
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:textColor="@color/blue_900"
                android:layout_height="wrap_content"
                android:text="@string/fragment_order_requests_volume_per_unit_title_text"/>
            <EditText
                android:id="@+id/volume_per_unit_edit_text"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:textSize="15sp"
                android:layout_height="48dp"
                android:hint="@string/fragment_order_requests_volume_per_unit_hint"
                android:textColorHint="@color/gray"
                android:textColor="@color/gray"/>
            <TextView
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:textColor="@color/blue_900"
                android:layout_height="wrap_content"
                android:text="@string/fragment_order_requests_number_of_units_title_text"/>
            <EditText
                android:id="@+id/number_of_units_edit_text"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/fragment_order_requests_number_of_units_hint"
                android:textColorHint="@color/gray"
                android:textSize="15sp"
                android:textColor="@color/gray"/>
            <TextView
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:textColor="@color/blue_900"
                android:layout_height="wrap_content"
                android:text="@string/fragment_order_requests_additional_comments_title_text"/>

            <EditText
                android:id="@+id/additional_comments_edit_text"
                android:hint="@string/fragment_order_requests_additional_comments_hint"
                android:textColorHint="@color/gray"
                android:layout_width="fill_parent"
                android:gravity="bottom"
                android:layout_height="wrap_content"
                android:singleLine="false"
                android:lines="3" />
        </LinearLayout>
        <android.support.v7.widget.CardView
            android:layout_marginTop="32dp"
            android:layout_marginLeft="16dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            style="@style/CardViewStyle"
            cardCornerRadius="4dp"
            android:id="@+id/order_requests_button"
            android:clickable="true"
            android:elevation="8dp">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/blue_900">
                <wappi.iRoadCommunityPolicing.Utils.CustomView
                    android:visibility="invisible"
                    android:id="@+id/progressBarCircularIndetermininate"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_centerInParent="true"
                    android:background="@color/blue_900" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/fragment_order_requests_send_button_text"
                    android:gravity="center"
                    android:textSize="22sp"
                    android:id="@+id/send_order_button_text"
                    android:fontFamily="@style/TextAppearance.AppCompat.Title"
                    android:background="@color/blue_900"
                    android:textColor="@color/white"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"/>
            </RelativeLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/response"
        android:visibility="gone"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/light_black"
            android:textSize="18sp"
            android:id="@+id/message"
            android:fontFamily="@style/TextAppearance.AppCompat.Title"
            android:text="@string/fragment_verification_text"/>
        <android.support.v7.widget.CardView
            android:layout_marginTop="8dp"
            android:layout_marginLeft="12dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            style="@style/CardViewStyle"
            cardCornerRadius="4dp"
            android:id="@+id/OK_button"
            android:clickable="true"
            android:elevation="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/ok_button"
                android:gravity="center"
                android:textSize="22sp"
                android:fontFamily="@style/TextAppearance.AppCompat.Title"
                android:background="@color/blue_900"
                android:textColor="@color/white"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"/>
        </android.support.v7.widget.CardView>
    </LinearLayout>

</RelativeLayout>
</ScrollView>