<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="match_parent">
    <TextView
        android:layout_marginTop="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="24dp"
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:textColor="@color/blue_500"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:fontFamily="@string/font_fontFamily_drawer_item"
        android:text="@string/dialogue_title_change_password"/>
    <LinearLayout
        android:layout_below="@id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/change_password"
        android:orientation="vertical">
        <EditText
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:inputType="textPassword"
            android:textSize="15sp"
            android:id="@+id/current_password"
            android:hint="@string/change_password_current_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:inputType="textPassword"
            android:textSize="15sp"
            android:id="@+id/new_password"
            android:layout_width="match_parent"
            android:hint="@string/change_password_new_password"
            android:layout_height="wrap_content" />
        <EditText
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textSize="15sp"
            android:id="@+id/confirmation_password"
            android:inputType="textPassword"
            android:hint="@string/change_password_comfirm_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        </LinearLayout>
    <TextView
        android:id="@+id/ok_button"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_alignParentRight="true"
        android:layout_below="@id/change_password"
        android:layout_width="88dp"
        android:textColor="@color/blue_500"
        android:layout_height="36dp"
        android:textSize="16sp"
        android:text="@string/ok_button"
        android:textStyle="bold"
        android:background="@drawable/touch_selector"
        android:fontFamily="@string/font_fontFamily_drawer_item"
        android:gravity="center"/>
    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/loader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/ok_button"
        android:layout_alignTop="@id/ok_button"
        android:layout_alignLeft="@id/ok_button"
        android:layout_alignRight="@id/ok_button">
        <wappi.iRoadCommunityPolicing.Utils.CustomeViewBlue
            android:id="@+id/progressBarCircularIndetermininate"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_centerInParent="true" />
    </RelativeLayout>

    <TextView
        android:id="@+id/cancel_button"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_toLeftOf="@id/ok_button"
        android:background="@drawable/touch_selector"
        android:layout_below="@id/change_password"
        android:layout_width="88dp"
        android:textColor="#666666"
        android:layout_height="36dp"
        android:textSize="16sp"
        android:text="@string/cancel_button"
        android:textStyle="bold"
        android:fontFamily="@string/font_fontFamily_drawer_item"
        android:gravity="center"/>

</RelativeLayout>