<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/ver"
        android:orientation="vertical"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/light_black"
            android:textSize="18sp"
            android:id="@+id/verification_title"
            android:fontFamily="@string/font_fontFamily_drawer_item"
            android:text="@string/fragment_activation_text"/>
        <ImageView
            android:layout_marginTop="8dp"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scaleType="centerCrop"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:id="@+id/result_image"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.CardView
                android:layout_marginTop="8dp"
                android:layout_marginLeft="16dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                style="@style/CardViewStyle"
                cardCornerRadius="4dp"
                android:id="@+id/scan_button"
                android:clickable="true"
                android:elevation="8dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/scan"
                    android:gravity="center"
                    android:textSize="22sp"
                    android:fontFamily="@style/TextAppearance.AppCompat.Title"
                    android:background="@color/dark_dvs"
                    android:textColor="@color/white"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"/>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_marginTop="8dp"
                android:visibility="gone"
                android:layout_marginLeft="16dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                style="@style/CardViewStyle"
                cardCornerRadius="4dp"
                android:id="@+id/activation_button"
                android:clickable="true"
                android:elevation="8dp">
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@color/dark_dvs">
                    <wappi.iRoadCommunityPolicing.Utils.CustomView
                        android:visibility="invisible"
                        android:id="@+id/progressBarCircularIndetermininate"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_centerInParent="true"
                        android:background="@color/dark_dvs" />
                    <TextView
                        android:id="@+id/activation_button_text"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/activate"
                        android:gravity="center"
                        android:textSize="22sp"
                        android:fontFamily="@style/TextAppearance.AppCompat.Title"
                        android:background="@color/dark_dvs"
                        android:textColor="@color/white"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"/>
                    </RelativeLayout>
            </android.support.v7.widget.CardView>
            </RelativeLayout>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/response"
        android:visibility="gone"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/light_black"
            android:textSize="18sp"
            android:id="@+id/message"
            android:fontFamily="@style/TextAppearance.AppCompat.Title"
            android:text="@string/fragment_verification_text"/>
        <android.support.v7.widget.CardView
            android:layout_marginTop="8dp"
            android:layout_marginLeft="12dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_below="@id/verification_title"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            style="@style/CardViewStyle"
            cardCornerRadius="4dp"
            android:id="@+id/OK_button"
            android:clickable="true"
            android:elevation="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/ok_button"
                android:gravity="center"
                android:textSize="22sp"
                android:fontFamily="@style/TextAppearance.AppCompat.Title"
                android:background="@color/dark_dvs"
                android:textColor="@color/white"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"/>
        </android.support.v7.widget.CardView>

    </LinearLayout>

</RelativeLayout>